--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     </select>
 
     <div id="souscat-container" style="display:none;">
-      <div class="souscat-label">Sélectionnez une sous-catégorie :</div>
+      <div class="souscat-label">Sélectionnez la thématique pour laquelle vous avez une question :</div>
       <select id="souscat-select">
-        <option value="" disabled selected>-- Sélectionnez une sous-catégorie --</option>
+        <option value="" disabled selected>-- Sélectionnez une thématique --</option>
       </select>
     </div>
   </div>
